Fix ENCODED_DEFAULT string

--- a/conf/config.json
+++ b/conf/config.json
@@ -14,8 +14,8 @@
         "vision": true,
         "vision_font_size": 22
     },
-    "enable_trainer": false,
+    "enable_trainer": true,
     "trainer_config": {
-        "dump_json": false
+        "dump_json": true
     }
 }
