--- a/conf/config.json
+++ b/conf/config.json
@@ -1,6 +1,7 @@
 {
     "host": "127.0.0.1",
     "port": 8443,
+    "multiplayer_port": 8543,
     "no_proxy": false,
     "frida_port": 9443,
     "gadget_port": 10443,
